--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,7 +1,16 @@
 ---
-- hosts: mgr 
+- hosts: all
   become: yes
   tasks:
-  - name: Generating RSA key for root
-    user: name=mgr generate_ssh_key=yes ssh_key_bits=2048 ssh_key_file=.ssh/id_rsa
-...
+      - name: Generating RSA key for mgr
+        user: name=root generate_ssh_key=yes ssh_key_bits=2048
+
+- hosts: mgr
+  become: yes
+  tasks:
+      - name: Install ansible.
+        apt: name={{ item }} state=present update_cache=yes
+        with_items:
+            - ansible
+      - name: copy necessary items
+        script: ansible.sh
