cleanup and final

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,25 +1,32 @@
-[www1]
-192.168.2.11
+[lb]
+lb   ansible_user=vagrant
 
-[www2]
-192.168.2.12
 
-[webservers:children]
-www1
-www2
+[web]
+web1   ansible_user=vagrant
+web2   ansible_user=vagrant
 
-[rp]
-192.168.2.5
+web3   ansible_user=vagrant
 
-[mgr]
-192.168.2.6
+web4   ansible_user=vagrant
+
+#web5   ansible_user=vagrant
+
+#web6   ansible_user=vagrant
+
+#web7   ansible_user=vagrant
+
+#web8   ansible_user=vagrant
+
+#web9   ansible_user=vagrant
+
 
 [all:children]
-webservers
-mgr
-rp
+lb
+web
 
 [all:vars]
 ansible_connection=ssh 
-ansible_ssh_user=vagrant 
+ansible_user=vagrant 
 ansible_ssh_pass=vagrant
+
